20011205
 - (bal) OpenBSD CVS Sync
   - deraadt@cvs.openbsd.org 2001/11/14 20:45:08
     [sshd.c]
     errno saving wrapping in a signal handler
   - markus@cvs.openbsd.org 2001/11/16 12:46:13
     [ssh-keyscan.c]
     handle empty lines instead of dumping core; report from sha@sha-1.net

20011126
 - (tim) [contrib/cygwin/README, openbsd-compat/bsd-cygwin_util.c,
   openbsd-compat/bsd-cygwin_util.h, openbsd-compat/daemon.c]
   Allow SSHD to install as service under WIndows 9x/Me
   [configure.ac] Fix to allow linking against PCRE on Cygwin
   Patches by Corinna Vinschen <vinschen@redhat.com>

20011115
 - (djm) Fix IPv4 default in ssh-keyscan. Spotted by Dan Astoorian 
   <djast@cs.toronto.edu> Fix from markus@
 - (djm) Release 3.0.1p1

20011113
 - (djm) Fix early (and double) free of remote user when using Kerberos. 
   Patch from Simon Wilkinson <simon@sxw.org.uk>
 - (djm) AIX login{success,failed} changes. Move loginsuccess call to 
   do_authenticated. Call loginfailed for protocol 2 failures > MAX like 
   we do for protocol 1. Reports from Ralf Wenk <wera0003@fh-karlsruhe.de>,
   K.Wolkersdorfer@fz-juelich.de and others
 - (djm) OpenBSD CVS Sync
   - dugsong@cvs.openbsd.org 2001/11/11 18:47:10
     [auth-krb5.c]
     fix krb5 authorization check. found by <jhawk@MIT.EDU>. from 
     art@, deraadt@ ok
   - markus@cvs.openbsd.org  2001/11/12 11:17:07
     [servconf.c]
     enable authorized_keys2 again. tested by fries@
   - markus@cvs.openbsd.org  2001/11/13 02:03:57
     [version.h]
     enter 3.0.1
 - (djm) Bump RPM package versions

20011112
 - (djm) Makefile correctness fix from Mark D. Baushke <mdb@juniper.net>
 - (djm) Cygwin config patch from Corinna Vinschen <vinschen@redhat.com>
 - OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2001/10/24 08:41:41
     [sshd.c]
     mention remote port in debug message
   - markus@cvs.openbsd.org 2001/10/24 08:41:20
     [ssh.c]
     remove unused
   - markus@cvs.openbsd.org 2001/10/24 08:51:35
     [clientloop.c ssh.c]